    - Add Bengali, Estonian, Malagasy, Punjabi, Vietnamese to LANG variables
      in the Makefile

  [ Joey Hess ]
  * Add basic Persian and Hindi locale tasks by bubulle.
    Closes: #350121, #350171

  [ Christian Perrier ]
  * Remove non-existent kde-i18n-th for Thai
  * Add basic Punjabi locale tasks
  * Add basic Bengali locale tasks
  * Add aspell-fr to the French task

 -- Christian Perrier <bubulle@debian.org>  Sun, 29 Jan 2006 09:15:42 +0100

tasksel (2.40) unstable; urgency=low

  [ Translations of debconf templates ]
    - Added Punjabi (Gurmukhi).

  [ Translations of tasks ]
    - Updated Punjabi (Gurmukhi).

  [ Translations of programs ]
    - Updated Punjabi (Gurmukhi).

  [ Joey Hess ]
  * Use df -P to avoid line wrapped df. Closes: #349623

 -- Joey Hess <joeyh@debian.org>  Tue, 24 Jan 2006 14:20:34 -0500

tasksel (2.39) unstable; urgency=low

  [ Translations of debconf templates ]
    - Updated Lithuanian. (Kęstutis Biliūnas)
    - Updated Japanese. (Kenshi Muto)
    - Updated Bengali.
    - Updated Dutch. (Bart Cornelis)
    - Updated Slovak.
    - Updated Bulgarian.
    - Updated Ukrainian.
    - Updated Hebrew.
    - Updated Vietnamese.

  [ Translations of tasks ]
    - Updated Lithuanian. (Kęstutis Biliūnas)
    - Updated Japanese. (Kenshi Muto)
    - Updated Norwegian Bokmal.
    - Added Punjabi. (Amanpreet Singh Alam)
    - Updated Bengali.
    - Updated Hebrew.
    - Updated Dutch. (Bart Cornelis)
    - Updated Vietnamese.
    - Updated Slovak.
    - Updated Bulgarian.
    - Updated Ukrainian.

  [ Translations of programs ]
    - Updated Lithuanian. (Kęstutis Biliūnas)
    - Updated Japanese. (Kenshi Muto)
    - Added Punjabi. (Amanpreet Singh Alam)
    - Updated Hebrew.
    - Updated Dutch. (Bart Cornelis)
    - Updated Slovak.
    - Updated Bulgarian.
    - Updated Ukrainian.

  [ Joey Hess ]
  * Uncomment the now-available sa-exim in mail server task.
  * Add cpufrequtils to laptop.