@@ -14,6 +14,7 @@ tasksel (2.41) UNRELEASED; urgency=low
   * Add basic Punjabi locale tasks
   * Add basic Bengali locale tasks
   * Add aspell-fr to the French task
+  * Stop building "no" translations (no more supported in etch)
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 29 Jan 2006 09:15:42 +0100
 
